# linguisto

./: .gitignore  AGENTS.md  Cargo.toml  README-zh.md  README.md  browser.js  index.d.ts  index.js  linguisto.wasi-browser.js  linguisto.wasi.cjs  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml
benchmark/: bench.ts  package.json  pnpm-lock.yaml
scripts/: install.ps1  install.sh
src/: lib.rs  main.rs
