
[package]
authors = ["Homyee King"]
edition = "2021"
name = "linguisto"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
linguist = "0.1.6"
napi = "3.0.0"
napi-derive = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1.0"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
