
[package]
authors = ["Homyee King"]
edition = "2021"
name = "linguisto"
version = "0.1.2"
description = "A high-performance code language analysis tool based on github-linguist"
license = "MIT"
repository = "https://github.com/HomyeeKing/linguist"
readme = "README.md"
keywords = ["linguist", "language-detection", "code-analysis", "napi-rs"]
categories = ["development-tools"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
linguist = "0.1.6"
linguist-types = "0.1.3"
napi = "3.0.0"
napi-derive = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1.0"
ignore = "0.4"
rayon = "1.10"
num_cpus = "1.16"
indicatif = "0.17"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
